--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 <body>
    <main id="main">
       <h1 id="title">Dr. Norman Borlaug</h1>
-        <h2 font-size:20px;>
-            
-        </h2>The man who saved a billion lives</h2>
+        <h2 font-size:20px;>The man who saved a billion lives</h2>
    <img id="image" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute-page-main-image.jpg" border="0" alt="Nikola Tesla around 1896" />
 </a>
        
