--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h2 font-size:20px;>The man who saved a billion lives</h2>
    <img id="image" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute-page-main-image.jpg" border="0" alt="Nikola Tesla around 1896" />
 </a>
-       
+<p id="img-caption">Dr. Norman Borlaug</p>
           
    </main> 
 </body>
